--- a/index.html
+++ b/index.html
@@ -1,62 +1,43 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>你的名字 - 个人主页</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>受保护的个人主页</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100 text-gray-800 font-sans leading-relaxed">
-  <!-- Header -->
-  <header class="bg-white shadow-md">
-    <div class="max-w-4xl mx-auto px-6 py-8 flex flex-col md:flex-row justify-between items-center">
-      <h1 class="text-3xl font-bold">你好，我是张三</h1>
-      <p class="text-gray-600 mt-2 md:mt-0">前端开发者 | 设计师 | 写作者</p>
-    </div>
+<body class="bg-gray-100 text-gray-800 font-sans">
+  <header class="bg-white shadow p-6 text-center">
+    <h1 class="text-3xl font-bold">你好，我是 {你的姓名}</h1>
+    <p class="text-gray-600 mt-2">欢迎来到加密保护的个人主页</p>
   </header>
 
-  <!-- About Me -->
-  <section class="max-w-4xl mx-auto px-6 py-12">
-    <h2 class="text-2xl font-semibold mb-4">关于我</h2>
-    <p>
-      我是一名热爱设计与技术的创作者，擅长构建简洁、美观且功能性强的网页。
-      我相信技术与美感可以并存，欢迎你了解我的作品。
-    </p>
-  </section>
+  <main class="max-w-4xl mx-auto py-8 px-4">
+    <section id="about" class="mb-10">
+      <h2 class="text-2xl font-semibold mb-4">关于我</h2>
+      <p>这里是自我介绍内容，替换为你的内容。</p>
+    </section>
 
-  <!-- Projects -->
-  <section class="bg-white py-12">
-    <div class="max-w-4xl mx-auto px-6">
-      <h2 class="text-2xl font-semibold mb-6">作品集</h2>
+    <section id="projects" class="mb-10">
+      <h2 class="text-2xl font-semibold mb-4">作品集</h2>
       <div class="grid gap-6 md:grid-cols-2">
-        <!-- 项目1 -->
-        <div class="bg-gray-100 p-4 rounded-lg shadow hover:shadow-md transition">
-          <h3 class="text-xl font-bold">项目名称 1</h3>
-          <p class="text-sm text-gray-600 mb-2">项目简介一句话</p>
-          <a href="#" class="text-blue-500 hover:underline" target="_blank">查看项目 →</a>
+        <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
+          <h3 class="text-xl font-bold">项目 1</h3>
+          <p class="text-gray-600">项目简述一句话</p>
+          <a href="#" class="text-blue-500 hover:underline">查看项目 →</a>
         </div>
-        <!-- 项目2 -->
-        <div class="bg-gray-100 p-4 rounded-lg shadow hover:shadow-md transition">
-          <h3 class="text-xl font-bold">项目名称 2</h3>
-          <p class="text-sm text-gray-600 mb-2">项目简介一句话</p>
-          <a href="#" class="text-blue-500 hover:underline" target="_blank">查看项目 →</a>
-        </div>
-        <!-- 你可以继续添加更多项目 -->
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Contact -->
-  <section class="max-w-4xl mx-auto px-6 py-12">
-    <h2 class="text-2xl font-semibold mb-4">联系我</h2>
-    <p>📮 邮箱：<a href="mailto:you@example.com" class="text-blue-600 underline">you@example.com</a></p>
-    <p>🔗 GitHub：<a href="https://github.com/yourname" target="_blank" class="text-blue-600 underline">github.com/yourname</a></p>
-    <p>📘 简历下载：<a href="resume.pdf" class="text-blue-600 underline">点击下载</a></p>
-  </section>
+    <section id="contact">
+      <h2 class="text-2xl font-semibold mb-4">联系我</h2>
+      <p>📮 邮箱：<a href="mailto:you@example.com" class="text-blue-600 underline">you@example.com</a></p>
+      <p>🔗 GitHub：<a href="https://github.com/yourname" class="text-blue-600 underline">yourname</a></p>
+    </section>
+  </main>
 
-  <!-- Footer -->
   <footer class="bg-white text-center text-gray-500 text-sm py-4 border-t">
-    © 2025 张三. 保留所有权利.
+    © 2025 {你的姓名}。保留所有权利。
   </footer>
 </body>
 </html>
