--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body class="bg-gray-100 text-gray-800 font-sans">
   <header class="bg-white shadow p-6 text-center">
-    <h1 class="text-3xl font-bold">你好，我是 {你的姓名}</h1>
-    <p class="text-gray-600 mt-2">欢迎来到加密保护的个人主页</p>
+    <h1 class="text-3xl font-bold">小王小崔秘密基地</h1>
+    <p class="text-gray-600 mt-2">wwpcmg 主页</p>
   </header>
 
   <main class="max-w-4xl mx-auto py-8 px-4">
