--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <header class="bg-white shadow p-6 text-center">
     <h1 class="text-3xl font-bold">小王小崔秘密基地</h1>
     <p class="text-gray-600 mt-2">wwpcmg 主页</p>
+     <p class="text-gray-600 mt-2">wwpcmg 主页2</p>
   </header>
 
   <main class="max-w-4xl mx-auto py-8 px-4">
