--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>受保护的个人主页</title>
+  <title>wwpcmg的主页</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 text-gray-800 font-sans">
   <header class="bg-white shadow p-6 text-center">
     <h1 class="text-3xl font-bold">小王小崔秘密基地</h1>
     <p class="text-gray-600 mt-2">wwpcmg 主页</p>
-     <p class="text-gray-600 mt-2">wwpcmg 主页2</p>
   </header>
 
   <main class="max-w-4xl mx-auto py-8 px-4">
