--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="bg-gray-100 text-gray-800 font-sans">
   <header class="bg-white shadow p-6 text-center">
     <h1 class="text-3xl font-bold">小王小崔秘密基地</h1>
-    <p class="text-grey-600 mt-3">记录我们生活的点点滴滴! </p>
+    <p class="text-red-600 mt-3">记录我们生活的点点滴滴! </p>
   </header>
 
   <main class="max-w-4xl mx-auto py-8 px-4">
