--- a/index.html
+++ b/index.html
@@ -1,43 +1,25 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>wwpcmg的主页</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <title>登录页面</title>
 </head>
-<body class="bg-gray-100 text-gray-800 font-sans">
-  <header class="bg-white shadow p-6 text-center">
-    <h1 class="text-3xl font-bold">小王小崔秘密基地</h1>
-    <p class="text-red-600 mt-3">记录我们生活的点点滴滴! </p>
-  </header>
+<body>
+  <h2>用户登录示例</h2>
+  <div id="netlify-identity-widget"></div>
 
-  <main class="max-w-4xl mx-auto py-8 px-4">
-    <section id="about" class="mb-10">
-      <h2 class="text-2xl font-semibold mb-4">关于我</h2>
-      <p>这里是自我介绍内容，替换为你的内容。</p>
-    </section>
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <script>
+    netlifyIdentity.init();
 
-    <section id="projects" class="mb-10">
-      <h2 class="text-2xl font-semibold mb-4">作品集</h2>
-      <div class="grid gap-6 md:grid-cols-2">
-        <div class="bg-white rounded-lg shadow p-4 hover:shadow-lg transition">
-          <h3 class="text-xl font-bold">项目 1</h3>
-          <p class="text-gray-600">项目简述一句话</p>
-          <a href="#" class="text-blue-500 hover:underline">查看项目 →</a>
-        </div>
-      </div>
-    </section>
+    netlifyIdentity.on('login', () => {
+      // 登录成功自动跳转
+      window.location.href = "/protected.html";
+    });
 
-    <section id="contact">
-      <h2 class="text-2xl font-semibold mb-4">联系我</h2>
-      <p>📮 邮箱：<a href="mailto:you@example.com" class="text-blue-600 underline">you@example.com</a></p>
-      <p>🔗 GitHub：<a href="https://github.com/yourname" class="text-blue-600 underline">yourname</a></p>
-    </section>
-  </main>
-
-  <footer class="bg-white text-center text-gray-500 text-sm py-4 border-t">
-    © 2025 {你的姓名}。保留所有权利。
-  </footer>
+    netlifyIdentity.on('logout', () => {
+      window.location.href = "/";
+    });
+  </script>
 </body>
 </html>
